--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^3.9.0",
+    "@mux/mux-player": "^2.9.1",
+    "@mux/mux-player-react": "^2.9.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
