--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@remix-run/react": "^2.10.1",
     "@remix-run/server-runtime": "^2.10.1",
-    "@shopify/hydrogen": "2024.7.4",
+    "@shopify/hydrogen": "^2024.7.5",
     "@shopify/remix-oxygen": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -82,7 +82,7 @@
     "@graphql-codegen/cli": "5.0.2",
     "@remix-run/dev": "^2.10.1",
     "@remix-run/eslint-config": "^2.10.1",
-    "@shopify/cli": "~3.65.3",
+    "@shopify/cli": "^3.66.1",
     "@shopify/hydrogen-codegen": "^0.3.1",
     "@shopify/mini-oxygen": "^3.0.4",
     "@shopify/oxygen-workers-types": "^4.1.2",
